--- a/shopus-html-bootstrap/HTML Code/index.html
+++ b/shopus-html-bootstrap/HTML Code/index.html
@@ -73,7 +73,7 @@
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M13.9708 16.4151C12.5227 17.4021 10.9758 17.9723 9.27353 18.0062C5.58462 18.0802 2.75802 16.483 1.05056 13.1945C-1.76315 7.77253 1.33485 1.37571 7.25086 0.167548C12.2281 -0.848249 17.2053 2.87895 17.7198 7.98579C17.9182 9.95558 17.5566 11.7939 16.5852 13.5061C16.4512 13.742 16.483 13.8725 16.6651 14.0553C18.2412 15.6386 19.8112 17.2272 21.3735 18.8244C22.1826 19.6513 22.2058 20.7559 21.456 21.4932C20.7697 22.1678 19.7047 22.1747 18.9764 21.4793C18.3623 20.8917 17.7774 20.2737 17.1796 19.6688C16.118 18.5929 15.0564 17.5153 13.9708 16.4151ZM2.89545 9.0364C2.91692 12.4172 5.59664 15.1164 8.91967 15.1042C12.2384 15.092 14.9138 12.3493 14.8889 8.98505C14.864 5.63213 12.1826 2.92508 8.89047 2.92857C5.58204 2.93118 2.87397 5.68958 2.89545 9.0364Z"
-                                            fill="black" />
+                                            fill="#0D0D4F" />
                                     </svg>
                                 </span>
                             </button>
@@ -689,12 +689,12 @@
                         <div class="empty position-fixed" onclick="tooglmenu()"></div>
                         <button class="dropdown-btn" onclick="tooglmenu()">
                             <span class="dropdown-icon">
-                                <svg width="14" height="9" viewBox="0 0 14 9" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="14" height="1" />
-                                    <rect y="8" width="14" height="1" />
-                                    <rect y="4" width="10" height="1" />
-                                </svg>
+                            <svg width="34" height="20" viewBox="0 0 34 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+<line x1="5" y1="4.5" x2="29" y2="4.5" stroke="#D4B055"/>
+<line x1="5" y1="9.5" x2="29" y2="9.5" stroke="#D4B055"/>
+<line x1="5" y1="14.5" x2="29" y2="14.5" stroke="#D4B055"/>
+</svg>
+
                             </span>
                             <span class="list-text">
                                 All Categories
@@ -1104,7 +1104,7 @@
                     </div>
                     <div class="header-vendor-btn">
                         <a href="become-vendor.html" class="shop-btn">
-                            <span class="list-text shop-text">Became Vendor</span>
+                            <span class="list-text shop-text">Be our Partner&nbsp;</span>
                             <span class="icon">
                                 <svg width="24" height="16" viewBox="0 0 24 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -4686,7 +4686,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="footer-order">
                             <div class="logo">
-                                <img src="assets/images/logos/footer-logo.webp" alt="logo">
+                                <img src="the meghas pic.png" alt="logo">
                             </div>
                             <div class="footer-link order-link">
                                 <ul>
@@ -4705,7 +4705,6 @@
                             </h4>
                             <div class="footer-link about-link">
                                 <ul>
-                                    <li><a href="about.html">Rave’s Story</a></li>
                                     <li><a href="about.html">Work With Us</a></li>
                                     <li><a href="about.html">Coporate News</a></li>
                                     <li><a href="about.html">Investors</a></li>
@@ -4775,7 +4774,7 @@
                                                 </g>
                                                 <defs>
                                                     <clippath id="clip0_56_7">
-                                                        <rect width="17" height="17" fill="white"
+                                                        <rect width="17" height="17" fill="#0D0D4F"
                                                             transform="translate(13.9995 13.9961)"></rect>
                                                     </clippath>
                                                 </defs>
@@ -4783,8 +4782,8 @@
                                         </span>
                                     </div>
                                     <div class="details">
-                                        <h4 class="footer-heading">Phone:</h4>
-                                        <p>+880171889547</p>
+                                        <h4 class="footer-heading">Moblie No:</h4>
+                                        <p>8302804057</p>
                                     </div>
                                 </div>
                             </div>
