--- a/shopus-html-bootstrap/HTML Code/index.html
+++ b/shopus-html-bootstrap/HTML Code/index.html
@@ -2352,7 +2352,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right" data-aos-duration="100">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-5.webp"
+                                <img src="../../saree 7.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -2445,7 +2445,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Leather Dress Shoes
+                                    <a href="product-info.html" class="product-details">Georgot Silk 
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹2299</span>
@@ -2461,7 +2461,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right" data-aos-duration="200">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-3.webp"
+                                <img src="../../saree 1.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -2554,7 +2554,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Trendy Bucket Hat
+                                    <a href="product-info.html" class="product-details">Traditional Banarsi 
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹3999</span>
@@ -2570,7 +2570,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right" data-aos-duration="300">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-6.webp"
+                                <img src="../../saree 3.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -2663,7 +2663,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Stylish Statement Earrings
+                                    <a href="product-info.html" class="product-details">Stylish Statement Georgot
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹3999</span>
@@ -2679,7 +2679,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right" data-aos-duration="400">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-9.webp"
+                                <img src="../../banarsi silk.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -2772,7 +2772,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Rainbow Sequin Dress
+                                    <a href="product-info.html" class="product-details">Bnarsi Silk
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹2999</span>
@@ -3589,7 +3589,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-5.webp"
+                                <img src="../../saree 5.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -3682,7 +3682,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Slim-Fit Shirt
+                                    <a href="product-info.html" class="product-details">Kaanjivaram Ethical saree
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1499</span>
@@ -3698,7 +3698,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-3.webp"
+                                <img src="../../saree 4.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -3791,7 +3791,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Sequin Dress
+                                    <a href="product-info.html" class="product-details">Silk Flower Saree
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹3199</span>
@@ -3807,7 +3807,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-6.webp"
+                                <img src="../../saree 2.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -3900,7 +3900,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Red Sequin Dress
+                                    <a href="product-info.html" class="product-details">Red Sequin Silk
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹2199</span>
@@ -3916,7 +3916,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-9.webp"
+                                <img src="../../saree 6.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -4009,7 +4009,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Rainbow Sequin Dress
+                                    <a href="product-info.html" class="product-details">Baby Pink Sequin Net
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1999</span>
@@ -4329,7 +4329,7 @@
                     <div class="col-xl-2 col-md-4">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-13.webp"
+                                <img src="../../kurta 5.jpg"
                                     alt="product-img">
                             </div>
                             <div class="product-info">
@@ -4356,7 +4356,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Gradient Party Shirt
+                                    <a href="product-info.html" class="product-details">Gradient Party Balck Kurta
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1999</span>
@@ -4369,7 +4369,7 @@
                     <div class="col-xl-2 col-md-4">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-1.webp"
+                                <img src="../../kurta7.jpg"
                                     alt="product-img">
                             </div>
                             <div class="product-info">
@@ -4409,7 +4409,7 @@
                     <div class="col-xl-2 col-md-4">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-12.webp"
+                                <img src="../../frok kurat 1.jpg"
                                     alt="product-img">
                             </div>
                             <div class="product-info">
@@ -4436,7 +4436,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Blue Suit
+                                    <a href="product-info.html" class="product-details">Frok Gown Suit
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1099</span>
@@ -4449,7 +4449,7 @@
                     <div class="col-xl-2 col-md-4">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-3.webp"
+                                <img src="../../gown 2.jpg"
                                     alt="product-img">
                             </div>
                             <div class="product-info">
@@ -4476,7 +4476,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Blue Party Dress
+                                    <a href="product-info.html" class="product-details">Black Party Dress
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹999</span>
@@ -4489,7 +4489,7 @@
                     <div class="col-xl-2 col-md-4">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-6.webp"
+                                <img src="../../kurta 6.jpg"
                                     alt="product-img">
                             </div>
                             <div class="product-info">
@@ -4516,7 +4516,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">White Hat
+                                    <a href="product-info.html" class="product-details"> The Ethical Gown Set
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1999</span>
@@ -4529,7 +4529,7 @@
                     <div class="col-xl-2 col-md-4">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-5.webp"
+                                <img src="../../rayon kurta plazo.jpg"
                                     alt="product-img">
                             </div>
                             <div class="product-info">
@@ -4556,7 +4556,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">White Checked Shirt
+                                    <a href="product-info.html" class="product-details">Rayon Kurta Plazo Set 
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1999</span>
