--- a/shopus-html-bootstrap/HTML Code/index.html
+++ b/shopus-html-bootstrap/HTML Code/index.html
@@ -1447,7 +1447,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-1.webp"
+                                <img src="../../JQR SHOES 2.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -1540,7 +1540,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Rainbow Sequin Dress
+                                    <a href="product-info.html" class="product-details">The Formal Black
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1299</span>
@@ -1556,7 +1556,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-2.webp"
+                                <img src="../../JQR SHOES 1.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -1649,7 +1649,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Feminine Wrap Blouse
+                                    <a href="product-info.html" class="product-details">Black Gard Sports
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹999</span>
@@ -1665,7 +1665,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-3.webp"
+                                <img src="../../JQR IMAGE 2.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -1758,7 +1758,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Trendy Bucket Hat
+                                    <a href="product-info.html" class="product-details">Trendy Bucky Shine
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1899</span>
@@ -1774,7 +1774,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-4.webp"
+                                <img src="../../SHOES 5.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -1867,7 +1867,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Boho Maxi Dress
+                                    <a href="product-info.html" class="product-details">Brownish Formal
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹2099</span>
@@ -1883,7 +1883,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-5.webp"
+                                <img src="../../Premium Men's Wrinkle-Resistant.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -1976,7 +1976,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Casual Denim Jacket
+                                    <a href="product-info.html" class="product-details">Premium Men's Wrinkle-Resistant
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹2199</span>
@@ -1992,8 +1992,8 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-6.webp"
-                                    alt="product-img">
+                                <img src="../../Lymio Casual Regular Fit Shirt for Men.jpg"
+                                    alt="product-img" width="556">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
                                         <span>
@@ -2085,7 +2085,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Stylish Statement Earrings
+                                    <a href="product-info.html" class="product-details">Lymio Casual Regular Fit Shirt for Men
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹2099</span>
@@ -2101,8 +2101,8 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-7.webp"
-                                    alt="product-img">
+                                <img src="../../LOUIS SENSE Men's Loose Pants.jpg"
+                                    alt="product-img" width="556">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
                                         <span>
@@ -2194,7 +2194,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Leather Dress Shoes
+                                    <a href="product-info.html" class="product-details">LOUIS SENSE Men's Loose Pants
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1999</span>
@@ -2210,7 +2210,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="product-wrapper" data-aos="fade-up">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-8.webp"
+                                <img src="../../UATHAYAM Linen Basic Cotton.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -2303,7 +2303,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Wool Peacoat
+                                    <a href="product-info.html" class="product-details">UATHAYAM Linen Basic Cotton
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹2599</span>
@@ -2803,8 +2803,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-5.webp"
-                                    alt="product-img">
+                                <img src="../../JQR IMAGE 2.jpg"
+                                    alt="product-img" width="695" height="695">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
                                         <span>
@@ -2912,7 +2912,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-3.webp"
+                                <img src="../../SHOES 3.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -3005,7 +3005,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Wool Peacoat
+                                    <a href="product-info.html" class="product-details">Wool Peacoat Shoes
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1599</span>
@@ -3021,7 +3021,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-6.webp"
+                                <img src="../../JQR SHOES 1.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -3130,7 +3130,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-7.webp"
+                                <img src="../../Metro Women Wedge Heel Fashion Sandal.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -3223,7 +3223,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Leather Dress Shoes
+                                    <a href="product-info.html" class="product-details">Metro Women Wedge Heel Fashion Sandal
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹2099</span>
@@ -3239,7 +3239,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-8.webp"
+                                <img src="../../Mochi Women's Sandal.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -3332,7 +3332,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Trendy Bucket Hat
+                                    <a href="product-info.html" class="product-details">Mochi Women's Sandal
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1399</span>
@@ -3348,7 +3348,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="product-wrapper" data-aos="fade-right">
                             <div class="product-img">
-                                <img src="./assets/images/homepage-one/product-img/product-img-10.webp"
+                                <img src="../../Catwalk Women's Braided Kitten Heel Mule.jpg"
                                     alt="product-img">
                                 <div class="product-cart-items">
                                     <a href="#" class="cart cart-item">
@@ -3441,7 +3441,7 @@
                                     </span>
                                 </div>
                                 <div class="product-description">
-                                    <a href="product-info.html" class="product-details">Rainbow Dress
+                                    <a href="product-info.html" class="product-details">Catwalk Women's Braided Kitten Heel Mule
                                     </a>
                                     <div class="price">
                                         <span class="price-cut">₹1299</span>
@@ -4077,6 +4077,9 @@
     </section>
     <!--------------- weekly-section-end--------------->
 
+	
+	
+	
     <!--------------- flash-section--------------->
     <section class="product best-product">
         <div class="container">
@@ -4572,6 +4575,11 @@
     </section>
     <!--------------- flash-section-end--------------->
 
+	
+	
+
+	
+	
     <!--------------- footer-section--------------->
     <section class="product footer">
         <div class="container">
